# Forms-vote-bot

./: README.md  environment.yml  pyproject.toml  requirements.txt
src/: runner.py
src/Forms-vote-bot/: runner.py
src/Forms-vote-bot/config/: settings.py
src/Forms-vote-bot/utils/: automator.py  position.py  validate.py
src/utils/: automator.py
